# smartRouter

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Makefile  README.md  README.zh.md  VERIFY.md  pyproject.toml
.github/workflows/: publish.yml
.opencode/plans/: 2026-04-27-rename-src-to-core.md
Formula/: smart-router.rb
config/: smart-router.yaml
config/examples/: minimal.yaml  multi-provider.yaml
config/examples/v3/: models.yaml  providers.yaml  routing.yaml
core/: AGENTS.md
core/smart_router/: cli.py
core/smart_router/classifier/: __init__.py  difficulty_classifier.py  types.py
core/smart_router/config/: loader.py  schema.py  watcher.py
core/smart_router/gateway/: __init__.py  daemon.py  server.py
core/smart_router/misc/: __init__.py
dev/: QUICKSTART.md  README.md  USAGE.md  pyproject.toml  verify.py
dev/smart_router/: cli.py  plugin.py  server.py
dev/templates/: smart-router.yaml
dev/tests/: test_classifier.py  test_integration.py  test_markers.py  test_selector.py
doc/: GUIDE.md
docs/: ARCHITECTURE_V2.md  CHANGELOG-v1.1.md  COFFEE_SPONSOR.md  FILE_ORGANIZATION.md  GUIDE.md  PUBLISH_CHECKLIST.md  README.zh.md  RELEASE.md  ROUTING_GUIDE.md  SRC_DIRECTORY_GUIDE.md
frontend/: AGENTS.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
homebrew/: smart-router.rb
script/: build-and-test.sh  download-config.py  install-remote.sh  install.sh  make-portable.sh  uninstall.sh  verify.py
specs/active/: 2026-04-18--smart-router.md
specs/archived/: 2026-04-18--smart-router.md  2026-04-19--config-v3-refactor.md  2026-04-21--routing-architecture-fix.md  2026-04-23--src-directory-refactor.md
specs/plans/: 2026-04-18--smart-router-plan.md
src/smart_router/: __init__.py  cli.py  coffee_qr.py  daemon.py  exceptions.py  plugin.py  plugin_v3_adapter.py  server.py
tests/: test_classifier.py  test_classifier_refactored.py  test_cli.py  test_cli_list.py  test_config_schema.py  test_context_aware.py  test_daemon.py  test_integration.py  test_plugin.py  test_plugin_v3_adapter.py  test_server.py  test_v3_integration.py  test_v3_loader.py  test_v3_schema.py  test_v3_selector.py
tests/classifier/: test_difficulty_classifier.py
tests/cli/: test_cli_edge.py
tests/config/: test_loader.py
tests/gateway/: test_server.py  test_server_main.py
tests/integration/: test_v3_integration.py
tests/misc/: test_coffee_qr.py
tests/selector/: test_model_selector.py  test_v3_selector.py
(+104 files in other folders)
