[project]
name = "smart-router"
version = "0.1.0"
description = "智能模型路由网关 — 基于 LiteLLM 的多服务商自动路由 CLI 工具"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Vaycent孙维", email = "vaycentsun@gmail.com"},
]
keywords = ["llm", "router", "gateway", "openai", "litellm", "cli", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "litellm>=1.0",
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
smart-router = "smart_router.cli:main"
smr = "smart_router.cli:main"

[project.urls]
Homepage = "https://github.com/vaycent/smartRouter"
Documentation = "https://github.com/vaycent/smartRouter/blob/main/docs/GUIDE.md"
Repository = "https://github.com/vaycent/smartRouter.git"
Issues = "https://github.com/vaycent/smartRouter/issues"
Changelog = "https://github.com/vaycent/smartRouter/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/smart_router"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/config",
    "/docs",
    "/tests",
    "/README.md",
    "/LICENSE",
]
